--- a/templates/showkey.html
+++ b/templates/showkey.html
@@ -26,7 +26,7 @@
         {% endif %}
     </div>
 
-    <div style="margin-bottom: 3rem">{{ to_qrcode(request.base_url, False)|safe }}</div>
+    <div style="margin-bottom: 3rem">{{ to_qrcode(request.base_url, True)|safe }}</div>
 
     <div style="margin-bottom: 3rem">
         Used on
